# DeepSight-Nebula

./: .gitignore  LICENSE  README.md  requirements.txt
App/: detection.py  reload.bat
App/src/analyse_frame_package/: package.xml  setup.cfg  setup.py
App/src/analyse_frame_package/analyse_frame_package/: analyse_frame_node.py
App/src/angle_correction_package/: package.xml  setup.cfg  setup.py
App/src/angle_correction_package/angle_correction_package/: angle_correction_node.py
App/src/camera_package/: package.xml  setup.py
App/src/camera_package/camera_package/: capture_frame_node.py
App/src/get_analysed_frame_package/: CMakeLists.txt  package.xml
App/src/get_analysed_frame_package/srv/: GetAnlysedFrame.srv
App/src/get_angle_correction_package/: CMakeLists.txt  package.xml
App/src/get_angle_correction_package/srv/: GetAngleCorrection.srv
App/src/xarm_esp32_interfaces/: CMakeLists.txt  package.xml
App/src/xarm_esp32_interfaces/action/: Adjust2D.action
App/src/xarm_esp32_package/: package.xml  setup.cfg  setup.py
App/src/xarm_esp32_package/xarm_esp32_package/: adjust_2d_server.py
Utils/: Hiwonder_esp32_xArm.urdf  model_convertion.py
app/: README.md
app/src/xArm32_urdf_description/: package.xml
app/src/xArm32_urdf_description/launch/: display.launch.py
app/src/xArm32_urdf_description/urdf/: gazebo.xacro  materials.xacro  xArm32_urdf.xacro
modelisations/: Arm-3-20.stl  Arm-3-30.stl  Arm-3-40.stl  Holder--1-3mm-var4.stl  Holder--1-4mm-var4.stl  Holder-2-var4.stl  Holder-4-var4.stl
modelisations/amount/: Cover-2-var4.stl  Cover-body-var4.stl
modelisations/robot/xArm32_description/: CMakeLists.txt  package.xml
modelisations/robot/xArm32_description/launch/: display.launch.py
modelisations/robot/xArm32_description/urdf/: gazebo.xacro  materials.xacro  xArm32.xacro
modelisations/robot/xArm32_urdf_description/: CMakeLists.txt  package.xml
modelisations/robot/xArm32_urdf_description/urdf/: xArm32_urdf.xacro
tests/: angle_calculation.py  main.py  test_angle_correction.py  test_arduino_code.cpp  test_arduino_servo_commands.py  test_camera_detection.py  test_ncnn_conversion.py  test_object_dectection.py  test_specialization_yoloworld_streamcam.py  test_yoloworld_streamcam.py
utils/: model_convertion.py  stereo_camera.py  xarm_esp32_init.py
